Completed Video page

--- a/index.html
+++ b/index.html
@@ -234,20 +234,6 @@
     <!-- HERO FILTER CONTAINER -->
     <div class="container mx-auto px-4 mt-16">
       <form class="w-full grid grid-cols-12 bg-white max-w-screen-xl mx-auto rounded-lg overflow-hidden">
-        <!-- ALL FEATURES -->
-        <div class="col-span-6 lg:col-span-4 border-b border-r relative">
-          <img src="images/image-grey.svg" alt=""
-            class="hidden sm:block h-6 absolute left-3 top-2/4 -translate-y-1/2 opacity-50 max-w-full">
-          <select name="feature" id="feature"
-            class="w-full border-none h-12 md:h-14 rounded-lg p-2.5 sm:pl-12 outline-none focus:outline-none appearance-none text-base sm:text-xl bg-[url('../images/download.svg')] bg-no-repeat bg-[position:right_0.5rem_center] bg-[length:1.5em_1.5em] text-[#766d66] font-['Jost',_sans-serif]">
-            <option>All feature types</option>
-            <option>Interview</option>
-            <option>Photo Essay</option>
-            <option>Spotlight</option>
-            <option>Story</option>
-            <option>Video</option>
-          </select>
-        </div>
         <!-- ALL ACTIVITY -->
         <div class="col-span-6 lg:col-span-4 border-b border-r relative">
           <img src="images/skiing-grey.svg" alt=""
@@ -280,7 +266,7 @@
           </select>
         </div>
         <!-- ALL AUTHORS -->
-        <div class="col-span-6 lg:col-span-3 border-b border-r relative">
+        <div class="col-span-6 lg:col-span-4 border-b border-r relative">
           <img src="images/pen-grey.svg" alt=""
             class="hidden sm:block h-6 absolute left-3 top-2/4 -translate-y-1/2 opacity-50 max-w-full">
           <select name="authors" id="authors"
@@ -303,7 +289,7 @@
           </select>
         </div>
         <!-- ALL PHOTOGRAPHERS -->
-        <div class="col-span-6 lg:col-span-3 border-b border-r relative">
+        <div class="col-span-6 lg:col-span-4 border-b border-r relative">
           <img src="images/camera-grey.svg" alt=""
             class="hidden sm:block h-6 absolute left-3 top-2/4 -translate-y-1/2 opacity-50 max-w-full">
           <select name="photographers" id="photographers"
@@ -324,14 +310,14 @@
           </select>
         </div>
         <!-- KEYWORDS -->
-        <div class="col-span-6 lg:col-span-3 border-b border-r relative">
+        <div class="col-span-6 lg:col-span-4 border-b border-r relative">
           <img src="images/search-grey.svg" alt=""
             class="hidden sm:block h-6 absolute left-3 top-2/4 -translate-y-1/2 opacity-50 max-w-full">
           <input type="text" name="keyword" id="keyword" placeholder="Keyword"
             class="text-[#766d66] font-['Jost',_sans-serif] h-12 md:h-14 rounded-lg p-2.5 sm:pl-12 outline-none focus:outline-none text-base sm:text-xl w-full">
         </div>
         <!-- FILTER BUTTON -->
-        <div class="col-span-12 lg:col-span-3 border-b border-r relative p-1">
+        <div class="col-span-12 lg:col-span-4 border-b border-r relative p-1">
           <button type="submit"
             class="w-full h-full px-3 py-2 md:py-3 whitespace-nowrap rounded-md ease-[cubic-bezier(.4,0,.2,1)] transition-all uppercase text-[15px] bg-[#f79400] text-white inline-flex items-center justify-center font-['Jost',_sans-serif] tracking-wider hover:bg-[#cb7900]">
             Filter
@@ -554,7 +540,18 @@
         <a href="#"
           class="p-3 text-base leading-5 inline-block rounded uppercase tracking-wider transition-all font-medium text-[#f79400] border border-[#f79400] hover:text-white hover:bg-[#f79400]">...</a>
         <a href="#"
-          class="p-3 text-base leading-5 inline-block rounded uppercase tracking-wider transition-all font-medium text-[#f79400] border border-[#f79400] hover:text-white hover:bg-[#f79400]">13</a>
+          class="p-3 text-base leading-5 inline-block rounded uppercase tracking-wider transition-all font-medium text-[#f79400] border border-[#f79400] hover:text-white hover:bg-[#f79400]">4</a>
+        <a href="#"
+          class="p-3 text-base leading-5 inline-flex rounded uppercase tracking-wider transition-all font-medium text-[#f79400] border border-[#f79400] hover:text-white hover:bg-[#f79400] items-center justify-center">
+          Next
+          <span>
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="w-5 h-5">
+              <path fill-rule="evenodd"
+                d="M7.21 14.77a.75.75 0 01.02-1.06L11.168 10 7.23 6.29a.75.75 0 111.04-1.08l4.5 4.25a.75.75 0 010 1.08l-4.5 4.25a.75.75 0 01-1.06-.02z"
+                clip-rule="evenodd" />
+            </svg>
+          </span>
+        </a>
       </div>
     </div>
   </section>
